--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ian Bullard - Portfolio</title>
 	<link rel="icon" href="_images/favicon.jpg">
-	<link href="/ianmbull/_css/styles.css" rel="stylesheet" type="text/css">
+	<link href="/styles.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
