--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ian Bullard - Portfolio</title>
-	<link rel="icon" href="_images/favicon.jpg">
+	<link rel="icon" href="images/favicon.jpg">
 	<link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
