--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="about-me container">
 
         <div class="col-left">
-            <div class="about-img"><img src="images/profile_pic.JPG" class="profile_pic"></div>
+            <div class="about-img"><img src="images/profile_pic.jpg" class="profile_pic"></div>
         </div>
 
         <div class="col-right">
