--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="skills-bottom">
             <div class="skills-item">
                 <div class="logo">
-                    <img src="../images/webdesign.png"> 
+                    <img src="../images/graphic-design.png"> 
                     <h2>Web Design</h2>
                 </div>
                 <p>I have a basic understanding of the concepts involved in creating a website and knowledge of HTML, CSS and some Javascript. My knowledge has been implemented in my portfolio site and used to create a website centered around a story I’m writing.</p>
@@ -98,7 +98,7 @@
 
             <div class="skills-item">
                 <div class="logo">
-                    <img src="../images/graphic-design.png">
+                    <img src="../images/design.png">
                     <h2>Graphic Design</h2>
                 </div>
                 <p>Layout and design are important when it comes to the approachability of products. Understand design principles and have knowedge of popular design programs like After Effects, Photoshop, and Illustrator.</p>
@@ -106,7 +106,7 @@
 
             <div class="skills-item">
                 <div class="logo">
-                    <img src="../images/icons8.png">
+                    <img src="../images/google-docs.png">
                     <h2>Documentation</h2>
                 </div>
                 <p>Documentation is extremely important to products and how end-users learn how to use these products. I have knowledge of common documentation tools such as Microsoft Word and understand how to write technical information with clarity.</p>
@@ -114,7 +114,7 @@
 
             <div class="skills-item">
                 <div class="logo">
-                    <img src="../images/team-player.png">
+                    <img src="../images/team.png">
                     <h2>Team Player</h2>
                 </div>
                 <p>I get along with others very well. Often times in team situations I try to adapt to the best of my ability to help the team and contribute in areas where the team might be lacking.</p>
@@ -122,7 +122,7 @@
 
             <div class="skills-item">
                 <div class="logo">
-                    <img src="../images/organized.png">
+                    <img src="../images/layers.png">
                     <h2>Organized</h2>
                 </div>
                 <p>I have great attention to detail and I keep everything organized and structured so that material that I need is easy to find when I need it.</p>
@@ -130,7 +130,7 @@
 
             <div class="skills-item">
                 <div class="logo">
-                    <img src="../images/creative.png">
+                    <img src="../images/idea.png">
                     <h2>Creative</h2>
                 </div>
                 <p>I have a very creative mindset. I enjoy finding new and interesting ways to solve complex problems or find interesting ways to approach tasks. I always try to think of ways to improve efficiency.</p>
@@ -231,6 +231,12 @@
             </div>
         </div>
         <p>Copyright © 2022 Ian Bullard. All rights reserved</p>
+        <a href="https://www.flaticon.com/free-icons/website-design" title="website design icons">Website design icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/design" title="design icons">Design icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/document" title="document icons">Document icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/team" title="team icons">Team icons created by Freepik - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/layers" title="layers icons">Layers icons created by Those Icons - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/idea" title="idea icons">Idea icons created by Freepik - Flaticon</a>
     </div>
 </div>
 </section>
