--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 
                 <p>A work in progress website that displays character information and shows an interactive map of the world from a story I am writing. This project was created as another form of media to represent my story while practicing HTML and CSS.</p>
                 <div class="background"><img src="../images/office.jpg" alt=""/></div>
-                <div class="button" onclick="location.href='leviathan.github.io';">View Project</div>
+                <div class="button" onclick="location.href='leviathan4.github.io';">View Project</div>
             </div>
         </div>
     </div>
