--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@
 
 
             <div class="portfolio-item">
-                <div class="icon"><h2>Computer Build FAQ</h2></div>
+                <div class="icon"><h2>Computer Building FAQ</h2></div>
                 
-                <p>Created a FAQ of common questions related to building a PC</p>
+                <p>The computer build FAQ is a project focused on developing an extensive and user-friendly Frequently Asked Question (FAQ) resource tailored to the specific needs of individuals interested in building their own personal computers.</p>
                 <div class="background"><img src="../images/office.jpg" alt=""/></div>
                 <div class="button"><a href="../faq.html">View Project</a></div>
             </div>
