--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,7 @@
 
 <body>
 <section class="faq">
+    <div class="return"><a href="index.html#portfolio">Return to Portfolio</a></div>
     <div class="container">
         <div class="accordion">
 
