--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="portfolio-item">
                 <div class="icon"><h2>A Guide for Building a PC</h2></div>
                 
-                <p>Wrote and customized documentation to cater to the diverse needs of both novice and experienced users, ensuring accessibility and effectiveness across all levels of proficiency. The purpose of this user guide is to explain and teach how to build a PC. This guide utilizes writing techiques to ensure clear understanding of the material.</p>
+                <p>Wrote and customized documentation to cater to the diverse needs of both novice and experienced users, ensuring accessibility and effectiveness across all levels of proficiency. The purpose of this user guide is to explain and teach how to build a PC. This guide utilizes writing techniques to ensure a clear understanding of the material.</p>
                 <div class="background"><img src="../images/office.jpg" alt=""/></div>
                 <a class="button" href='documents/A Guide for Building a PC.pdf'>View Project</a>
             </div>
